# key_point_extraction

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
movenet/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
movenet/docs/: Makefile  conf.py  example.ipynb  make.bat
movenet/src/movenet/: __init__.py
movenet/tests/: test_movenet.py
src/key_point_extraction/: __init__.py
tests/: test_key_point_extraction.py
