[tool.poetry]
name = "movenet"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Naveen, Siva"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
